--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -8,7 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 library(binom)
-library(knitr); library(magrittr); library(tidyverse); library(here)
+library(knitr); library(magrittr); library(tidyverse); library(here); library(grid)
+
 source(here("R/soc_info_helpers.R"))
 ```
 
@@ -93,8 +94,11 @@ Plot distribution over actions.
 d_prior %>% 
   count(action_response) %>% 
   mutate(m = n / sum(n)) %>% 
+  mutate(ci_lower = binom.bayes(x = n, n = sum(n), conf.level = 0.95) %>% pull(lower),
+         ci_upper = binom.bayes(x = n, n = sum(n), conf.level = 0.95) %>% pull(upper)) %>% 
   ggplot(aes(x = action_response, y = m)) +
   geom_bar(stat = "identity", width = 0.4) +
+  geom_linerange(aes(ymin=ci_lower,ymax=ci_upper), alpha = 0.3) +
   geom_hline(yintercept = 0.3, linetype = "dashed") +
   lims(y = c(0,0.7)) +
   ggthemes::scale_fill_ptol() +
@@ -280,8 +284,8 @@ e1_plot <- cowplot::plot_grid(action_plot_e1, sub_plots, labels = c("A"),
 Save figure.
 
 ```{r}
-ggsave("e1_plot.png", plot = e1_plot, width = 10, height = 4.5,
-       path = here::here("writing/cogsci2018/figs"))
+# ggsave("e1_plot.png", plot = e1_plot, width = 10, height = 4.5,
+#        path = here::here("writing/cogsci2018/figs"))
 ```
 
 ## Experiment 2
@@ -327,6 +331,50 @@ action_plot_e2 <- d_e2 %>%
         plot.margin=unit(c(0.5,1.2,0.5,1),"cm"))
 ```
 
+```{r bda}
+load(here("model/BDA/e2/results/soc-info-ver1-mcmc100000_burn50000_4chains.RData"))
+```
+
+```{r make action plot e2 w bda}
+d_e2_temp <- fromJSON(here("model/BDA/e2/e2-actionData.json"))
+
+d_e2_pred <- d_e2_temp %>% 
+  mutate(action = fct_recode(action, 
+                             "single" = "button",
+                             "single" = "handle")) %>%
+  # filter(action == "both") %>%
+  mutate(context = fct_recode(factor(obsPres),
+                              "social" = "1",
+                              "no-social" = "0"
+                              )) %>%  
+  mutate(goal = fct_recode(goal, "no goal" = "noGoal")) %>%
+  distinct(goal, context, action, id) %>%
+  count(action, goal, context) %>% 
+  group_by(goal, context) %>% 
+  mutate(prob = n / sum(n)) %>% 
+  mutate(ci_lower = binom.bayes(x = n, n = sum(n), conf.level = 0.95) %>% pull(lower),
+         ci_upper = binom.bayes(x = n, n = sum(n), conf.level = 0.95) %>% pull(upper)) %>% 
+  filter(action == "single") %>%
+  select(-n)
+
+data_mod <- rbind(postpred %>% mutate(source = "model"), d_e2_pred %>% mutate(source = "data"))
+
+data_mod_comp <- ggplot(data_mod, aes(x = goal, y = prob, fill = context)) +
+  geom_bar(stat = "identity", width = 0.6, position = position_dodge()) +
+  geom_linerange(aes(x = goal, ymin = ci_lower, ymax = ci_upper, 
+                     group = context), inherit.aes = F,
+                 color = "grey50", alpha = 0.6, size = 1,
+                 position = position_dodge(width = 0.6)) +
+  lims(y = c(0,1)) +
+  labs(x = NULL, y = "Prop. Participants", fill = "context:") +
+  scale_fill_grey(start = 0.1, end = 0.6)+ 
+  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
+        panel.grid.minor = element_blank(),
+        panel.grid.major = element_blank(),
+        plot.margin=unit(c(0.5,1.2,0.5,1),"cm")) +
+  facet_grid(source~.)
+```
+
 RT plot
 
 ```{r}
@@ -360,7 +408,7 @@ e2_ent_plot <- d_e2 %>%
   ggthemes::scale_color_ptol() +
   ggthemes::scale_fill_ptol() +
   lims(y = c(-1.5, 1.5)) +
-  guides(fill = F) + 
+  guides(fill = F) +
   labs(x = NULL, y = "entropy change", color = "action response: ") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
@@ -368,17 +416,79 @@ e2_ent_plot <- d_e2 %>%
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
 
-```{r}
-sub_plots_e2 <- cowplot::plot_grid(e2_rt_plot, e2_ent_plot, labels = c("B", "C"), 
-                                ncol = 1,
-                                rel_heights = c(0.75,1))
+```{r bda phi}
+d_phi <- d %>%
+  filter(grepl("phi", parameter)) %>%
+  filter(!(goal == "presentation" & context == "no-social")) %>%
+  group_by(parameter, goal, context) %>%
+  summarise(mean = mean(value),
+            ci_lower = hdi_lower(value),
+            ci_upper = hdi_upper(value)) %>%
+  ungroup() %>%
+  mutate(phi = fct_recode(parameter,
+                          "learning" = "phiLearning",
+                          "performance" = "phiPerformance",
+                          "presentation" = "phiPresentation"
+                          )) %>%
+  mutate(priority = fct_recode(phi,
+                               "exploration" = "learning",
+                               "exploitation" = "performance", 
+                               "exploitation" = "presentation"
+                               ))
 
-e2_plot <- cowplot::plot_grid(action_plot_e2, sub_plots_e2, labels = c("A"),
-                   rel_widths = c(1, 0.85))
+d_phi_exploit <- d_phi %>%
+  mutate(mean = case_when(priority == "exploration" ~ "0", 
+                                               TRUE ~ as.character(as.numeric(mean)))) %>%
+    mutate(mean = as.numeric(as.character(mean)))
+
+d_phi_explore <- d_phi %>%
+  mutate(mean = case_when(priority == "exploitation" ~ "0", 
+                          TRUE ~ as.character(as.numeric(mean)))) %>%
+  mutate(mean = as.numeric(as.character(mean)))
+
+phi <- d_phi %>%
+  ggplot(., aes(x = interaction(context, goal), y = mean, fill = phi, group = phi, order=phi)) +
+  geom_bar(data=d_phi_exploit,
+ stat="identity", width=.3, position = position_stack(reverse = TRUE)) +
+  geom_bar(data=d_phi_explore,
+position=position_nudge(x=-.3), stat="identity", width=.3) +
+  ylim(0,1) +
+  # annotate(geom = "text", label = d_phi$context) +
+  # annotate(geom = "text", label = unique(d_phi$goal)) +
+  ggthemes::scale_fill_ptol() +
+  ylab("phi value") +
+  xlab(NULL) +
+  theme_few() +
+  scale_x_discrete(position = "bottom", 
+                   labels = c("no-social\nlearning", "social\nlearning", 
+                              "no-social\nno-goal", "social\nno-goal",
+                              "no-social\nperformance", "social\nperformance",
+                              "social\npresentation")) +
+  labs(x = NULL, y = "entropy change", color = "action response: ") +
+  theme(
+    axis.text.x = element_text(vjust=1, hjust=0.8, angle=35, size=8),
+        # axis.text.x = element_blank(),
+        axis.ticks = element_blank(),
+        panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
+        panel.grid.minor = element_blank(),
+        panel.grid.major = element_blank(),
+        plot.margin=unit(c(0.5,1,0.5,1.2),"cm"),
+        legend.position = "top",
+        legend.direction = "horizontal",
+        legend.text=element_text(size=8))
 ```
 
 ```{r}
-ggsave("e2_plot.png", plot = e2_plot, width = 10, height = 4.5,
-       path = here::here("writing/cogsci2018/figs"))
+sub_plots_e2 <- cowplot::plot_grid(e2_rt_plot, e2_ent_plot, phi, labels = c("B", "C", "D"), 
+                                ncol = 1,
+                                rel_heights = c(0.7,0.8, 1))
+
+e2_plot <- cowplot::plot_grid(data_mod_comp, sub_plots_e2, labels = c("A"),
+                   rel_widths = c(1, 1))
+```
+
+```{r}
+# ggsave("e2_plot.png", plot = e2_plot, width = 10, height = 4.5,
+       # path = here::here("writing/cogsci2018/figs"))
 ```
 
